# MAI_numerical_methods

./: .gitignore  CMakeLists.txt  README.md
course_work/: CMakeLists.txt  buf  graphs.py  input.txt  main.cpp
task1.1/: CMakeLists.txt  input.txt  main.cpp
task1.2/: CMakeLists.txt  input.txt  main.cpp
task1.3/: CMakeLists.txt  graph.py  graphics.py  input.txt  main.cpp
task1.4/: CMakeLists.txt  graph.py  input.txt  main.cpp
task2.1/: CMakeLists.txt  main.cpp
task2.2/: CMakeLists.txt  main.cpp
task3.1/: CMakeLists.txt  main.cpp
task3.2/: CMakeLists.txt  input.txt  main.cpp
task3.3/: CMakeLists.txt  input.txt  main.cpp
task3.4/: CMakeLists.txt  input.txt  main.cpp
task3.5/: CMakeLists.txt  input.txt  main.cpp
task4.1/: CMakeLists.txt  input.txt  main.cpp
utility/: CMakeLists.txt
utility/algorithms/: CMakeLists.txt
utility/algorithms/include/: algorithms.h
utility/algorithms/src/: algorithms.cpp
utility/checks/: CMakeLists.txt
utility/checks/include/: checks.h
utility/checks/src/: checks.cpp
utility/matrixNxN/: CMakeLists.txt
utility/matrixNxN/include/: matrixNxN.h
utility/matrixNxN/src/: matrixNxN.cpp
utility/piecewise_polynomial/: CMakeLists.txt
utility/piecewise_polynomial/include/: piecewise_polynomial.h
utility/piecewise_polynomial/src/: piecewise_polynomial.cpp
utility/polynome/: CMakeLists.txt
utility/polynome/include/: polynome.h
utility/polynome/src/: polynome.cpp
utility/polynomial/: CMakeLists.txt
utility/polynomial/include/: polynomial.h
utility/polynomial/src/: polynomial.cpp
utility/vecN/: CMakeLists.txt
utility/vecN/include/: vecN.h
utility/vecN/src/: vecN.cpp
